# ray-tracing-weekend

./: .gitignore  Cargo.toml  README.md  SCENES.md  TODO.md
.github/workflows/: Bencher.yml  CI.yml
benches/: criterion_dielectric.rs  criterion_dielectric_pixel.rs  criterion_dielectric_scene.rs  criterion_grid_pixel.rs  criterion_grid_scene.rs  criterion_many_scene.rs  dielectric.rs  grid.rs  iai_dielectric.rs  iai_dielectric_pixel.rs  iai_dielectric_scene.rs  iai_grid.rs  iai_grid_pixel.rs  iai_grid_scene.rs
examples/: checkered_spheres.rs  cornell_box.rs  cornell_smoke.rs  defocus.rs  dielectric.rs  final.rs  final_checker.rs  final_checkered.rs  final_next_week.rs  fov.rs  fuzz.rs  hollow_glass.rs  metal.rs  motionblur.rs  perlin_sphere.rs  quads.rs  scene1.rs  simple_light.rs  viewport.rs  vup.rs
src/: aabb.rs  bvh.rs  camera.rs  color.rs  constant_medium.rs  hittable.rs  interval.rs  lib.rs  main.rs  material.rs  perlin.rs  point.rs  ppm.rs  quad.rs  ray.rs  texture.rs  vec3.rs
