[package]
name = "ray-tracing-weekend"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = "0.17.8"
rand = { version = "0.8.5" }
rayon = "1.10.0"

[dev-dependencies]
color-eyre = "0.6.3"
criterion = "0.5.1"
iai = "0.1"

[[bench]]
name = "iai_dielectric_scene"
harness = false

[[bench]]
name = "iai_grid_scene"
harness = false

[[bench]]
name = "iai_dielectric_pixel"
harness = false

[[bench]]
name = "iai_grid_pixel"
harness = false

[[bench]]
name = "criterion_dielectric_scene"
harness = false

[[bench]]
name = "criterion_dielectric_pixel"
harness = false

[[bench]]
name = "criterion_grid_scene"
harness = false

[[bench]]
name = "criterion_grid_pixel"
harness = false
